--- a/01_the_machine_learning_landscape.ipynb
+++ b/01_the_machine_learning_landscape.ipynb
@@ -3043,9 +3043,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:.conda-tf2]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-tf2-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3057,7 +3057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   },
   "nav_menu": {},
   "toc": {
